force-app/main/default/objects/clofor_com_cfs__LoanBank__c/fields/clofor_com_cfs__BankID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankID__c</fullName>
    <label>BANK ID</label>
    <referenceTo>clofor_com_cfs__BankTransaction__c</referenceTo>
    <relationshipLabel>LOAN+BANK</relationshipLabel>
    <relationshipName>LoanBankID</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>