force-app/main/default/objects/clofor_com_cfs__LoanBank__c/fields/clofor_com_cfs__LoanAmountFCYBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanAmountFCYBank__c</fullName>
    <label>LOAN AMOUNT(FCY) FOR BANK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>