force-app/main/default/objects/clofor_com_cfs__LoanBank__c/fields/clofor_com_cfs__LoanAmountFCYFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanAmountFCYFormu__c</fullName>
    <formula>clofor_com_cfs__LoanID__r.clofor_com_cfs__LoanAmountFCY__c</formula>
    <label>LOAN AMOUNT(FCY)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>