force-app/main/default/objects/clofor_com_cfs__LoanBank__c/fields/clofor_com_cfs__LoanAmountLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanAmountLocalFormu__c</fullName>
    <formula>clofor_com_cfs__LoanID__r.clofor_com_cfs__LoanAmount__c</formula>
    <label>LOAN AMOUNT(LOCAL)-FORMULA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>