force-app/main/default/objects/clofor_com_cfs__LoanBank__c/fields/clofor_com_cfs__LocalAmountLocalBank__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LocalAmountLocalBank__c</fullName>
    <label>LOAN AMOUNT(LOCAL) FOR BANK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>